--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -37,10 +37,12 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
 PyJWT==2.10.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-telegram-bot==22.3
 requests==2.32.4
 rsa==4.9.1
+six==1.17.0
 sniffio==1.3.1
 typing_extensions==4.14.1
 urllib3==2.5.0
