--- a/vercel.json
+++ b/vercel.json
@@ -15,5 +15,11 @@
       "src": "/(.*)",
       "dest": "backend/bot.py"
     }
+  ],
+  "crons": [
+    {
+      "path": "/api/cron",
+      "schedule": "0 5 * * *"
+    }
   ]
 }
