--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,28 @@
   "version": 2,
   "builds": [
     {
+      "src": "oikonomos-dashboard/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "oikonomos-dashboard/dist"
+      }
+    },
+    {
       "src": "backend/bot.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
-      "src": "/api/bot",
+      "src": "/api/(.*)",
       "dest": "backend/bot.py"
     },
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
-      "dest": "backend/bot.py"
+      "dest": "/index.html"
     }
   ],
   "crons": [
