--- a/oikonomos-dashboard/package.json
+++ b/oikonomos-dashboard/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "chart.js": "^4.5.0",
     "firebase": "^12.0.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
