--- a/oikonomos-dashboard/vercel.json
+++ b/oikonomos-dashboard/vercel.json
@@ -1,8 +1,12 @@
 {
-  "rewrites": [
-    {
-      "source": "/((?!api/.*).*)",
-      "destination": "/index.html"
-    }
-  ]
+    "rewrites": [
+        {
+            "source": "/api/:path*",
+            "destination": "https://oikonomos-finances.vercel.app//api/:path*"
+        },
+        {
+            "source": "/((?!api/.*).*)",
+            "destination": "/index.html"
+        }
+    ]
 }
