--- a/oikonomos-dashboard/vercel.json
+++ b/oikonomos-dashboard/vercel.json
@@ -2,7 +2,7 @@
     "rewrites": [
         {
             "source": "/api/:path*",
-            "destination": "https://oikonomos-finances.vercel.app//api/:path*"
+            "destination": "https://oikonomos-finances.vercel.app/api/:path*"
         },
         {
             "source": "/((?!api/.*).*)",
